# fay

./: .gitattributes  .gitignore  CMakeLists.txt  CodeMaker.cmd  README.md  RunTest.cmd  VCBuild.cmd  fay.cmd
cpp/: CMakeLists.txt  VCBuild.cmd
cpp/src/: build.cmd  fay.y  fay_ast.cpp  fay_ast.h  fay_builder.cpp  fay_builder.h  fay_compiler_ast.h  fay_compiler_nodes.cpp  fay_compiler_nodes.h  fay_compiler_pst.cpp  fay_compiler_tokens.cpp  fay_const.cpp  fay_const.h  fay_inst.cpp  fay_inst.h  fay_internal_fun.cpp  fay_internal_fun.h  fay_lang.cpp  fay_lang.h  fay_lang_const.cpp  fay_lang_const.h  fay_lang_ins.cpp  fay_lexer.cpp  fay_lexer.h  fay_object.cpp  fay_object.h  fay_parser.cpp  fay_parser.h  fay_runtime.h  fay_stack.cpp  fay_stack.h  fay_token.cpp  fay_token.h  fay_token_stack.cpp  fay_token_stack.h  fay_type.cpp  fay_type.h  fay_vm.cpp  fay_vm.h  fayc_const.h  (+36 more)
cs/: FayLang.sln
cs/Fay/: Fay.csproj  Program.cs
cs/FayC/: FayC.csproj  Program.cs
cs/FayC/Properties/: launchSettings.json
cs/FayC/ast/: ASTNode.cs
cs/FayC/ast/define/: AstArray.cs  AstBlock.cs  AstClass.cs  AstCondition.cs  AstField.cs  AstFile.cs  AstFun.cs  AstID.cs  AstParamDefine.cs  AstParamDefineList.cs  AstParams.cs  AstType.cs
cs/FayC/ast/op/: AstBoolOP.cs  AstBracket.cs  AstBrackets.cs  AstLeftRightOP.cs  AstPostOP.cs  AstPreOP.cs
cs/FayC/ast/stmt/: AstAssign.cs  AstCall.cs  AstFor.cs  AstIf.cs  AstPackage.cs  AstReturn.cs  AstUsing.cs  AstVar.cs
cs/FayC/ast/value/: AstByte.cs  AstNumber.cs  AstString.cs
cs/FayC/lexical/: ITokenRule.cs  Lexer.cs  Token.cs
cs/FayC/lexical/Rules/: BasicTokenRule.cs  CharTokenRule.cs  NumberTokenRule.cs  RegexTokenRule.cs  StringTokenRule.cs  SymbolTokenRule.cs  WordTokenRule.cs  WordsTokenRule.cs
cs/FayC/runtime/: FayClass.cs  FayDomain.cs  FayFile.cs  FayFun.cs  FayLib.cs  FayNode.cs  FayParamDefine.cs  FayScope.cs  FayType.cs  FayVar.cs
cs/FayC/syntax/: ParseException.cs  ParseStack.cs  Parser.cs
cs/FayLib/: Const.cs  FayDataType.cs  FayLib.csproj  IDataObj.cs  TokenType.cs
cs/FayLib/instruction/impl/: FayInst.cs  FayInstType.cs  InstImpl.cs
cs/FayTest/: FayTest.csproj  Program.cs
data/: inst.json
doc/: Fay.mmap  FayLang.xlsx  i18n.cn.json  message.cn.json
ext/fay/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
ext/fay/syntaxes/: fay.tmLanguage.json
project1/src/: MyTestA.fay
ref/bak171224/: fay.l  fay.y
ref/win_sjis/calc/llparser/: lexicalanalyzer.c  make.bat  make.sh  parser.c  token.h
ref/win_sjis/calc/llparser_ex/: lexicalanalyzer.c  parser.c  token.h
ref/win_sjis/calc/mycalc/: make.sh  mycalc.l  mycalc.y
ref/win_sjis/calc/mycalc_ex/: make.bat  mycalc.l  mycalc.y
ref/win_sjis/crowbar_book_0_1/: CRB.h  CRB_dev.h  Makefile  create.c  crowbar.h  crowbar.l  crowbar.y  error.c  error_message.c  error_message_not_gcc.c  eval.c  execute.c  interface.c  main.c  native.c  string_pool.c  util.c
ref/win_sjis/crowbar_book_0_1/debug/: Makefile
ref/win_sjis/crowbar_book_0_1/memory/: Makefile  main.c  memory.c
ref/win_sjis/crowbar_book_0_1/test/: ftest.crb  test.crb  test.result
ref/win_sjis/crowbar_book_0_2/: CRB_dev.h  Makefile  create.c  crowbar.h  crowbar.l  error.c  error_message.c  error_message_not_gcc.c  eval.c  heap.c  interface.c  native.c  string.c  util.c
ref/win_sjis/crowbar_book_0_2/debug/: Makefile
ref/win_sjis/crowbar_book_0_2/memory/: Makefile  memory.c
ref/win_sjis/crowbar_book_0_2/test/: array.crb  test.crb  test.result
ref/win_sjis/crowbar_book_0_3/: CRB_dev.h  Makefile  crowbar.h  crowbar.l  crowbar.y  error.c  error_message.c  error_message_not_gcc.c  eval.c  execute.c  heap.c  interface.c  main.c  native.c  string.c  util.c  wchar.c
ref/win_sjis/crowbar_book_0_3/test/: code.result  ftest.result  test.crb
ref/win_sjis/crowbar_book_0_4/: CRB.h  CRB_dev.h  Makefile  create.c  crowbar.h  crowbar.l  crowbar.y  error.c  error_message.c  error_message_not_gcc.c  eval.c  execute.c  heap.c  interface.c  main.c  native.c  nativeif.c  regexp.c  string.c  util.c  wchar.c
ref/win_sjis/crowbar_book_0_4/builtin/: builtin.crb  conv.crb  head.txt  tail.txt
ref/win_sjis/crowbar_book_0_4/test/: Point2.crb  code.result  code.txt  code2.result  error.crb  error.result  exception.crb  fizzbuzz.crb  ftest.result  test.crb  test.result
ref/win_sjis/diksam_book_0_1/compiler/: Makefile  error_message.c
ref/win_sjis/diksam_book_0_1/dvm/: error_message.c
ref/win_sjis/diksam_book_0_2/compiler/: Makefile  error_message.c
ref/win_sjis/diksam_book_0_2/dvm/: error_message.c
ref/win_sjis/diksam_book_0_3/compiler/: diksam.l  error_message.c  error_message_not_gcc.c
ref/win_sjis/diksam_book_0_3/dvm/: error_message.c  error_message_not_gcc.c
ref/win_sjis/diksam_book_0_3/main/: Makefile
script/: test1.fay  test5.fay  test6.fay
script/bak/: test2.fay  test3.fay  test4.fay  test6.fay
script/bak/com/larlf/: test0.fay
script/com/larlf/: test.fay  test1.fay  test2.fay
script/test1/src/: Bad.fay  FlowTest.fay  MathTest.fay  MyTestA.fay  OOPTest.fay  StringTest.fay  TypeTest.fay
script/test2/src/: Main.fay
src/: build.sh  cmdline.h  fay.h  fay.l  fay_ast.cpp  fay_ast.h  fay_builder.cpp  fay_builder.h  fay_compiler.cpp  fay_compiler.h  fay_compiler_ast.cpp  fay_compiler_parser.cpp  fay_compiler_parser.hpp  fay_compiler_parser.output  fay_compiler_pst.h  fay_const.cpp  fay_const.h  fay_i18n.cpp  fay_i18n.h  fay_inst.cpp  fay_inst.h  fay_internal_fun.cpp  fay_internal_fun.h  fay_internal_object.cpp  fay_internal_object.h  fay_lang.cpp  fay_lang.h  fay_lang_ins.h  fay_lang_utils.cpp  fay_lang_utils.h  fay_lexer.cpp  fay_lexer.h  fay_log.cpp  fay_log.h  fay_main.cpp  fay_object.cpp  fay_object.h  fay_parser.cpp  fay_parser.h  fay_project.cpp  (+31 more)
tools/: index.js  index.js.map  index.ts  package-lock.json  package.json  typings.json
tools/tpl/: ins_h.ejs  inst_c.ejs  inst_h.ejs
tools/typings/: index.d.ts
tools/typings/modules/colors/: index.d.ts  typings.json
tools/typings/modules/dot/: index.d.ts  typings.json
tools/typings/modules/ejs/: index.d.ts  typings.json
(+8 files in other folders)
